--- a/style.css
+++ b/style.css
@@ -18,8 +18,10 @@
     grid-row: 1/span 1;
     display: flex;
     flex-direction: column;
-    top: 1.5rem;
     gap: 1.5rem;
+    background-color: white;
+    padding: 2.5rem;
+
 }
 .Content_Area{
     grid-column: 2/4;
@@ -29,6 +31,7 @@
     gap: 3vh;
 }
 .Content_Area>p{
+    align-self: flex-end;
     grid-column: 1/-1;
 }
 .Content_Area .cards{
@@ -90,14 +93,12 @@ input:focus{
     display: flex;
     justify-content: space-between;
     gap:20px;
-    padding: 0 5rem 0 0;
 }
 .Header_Bottom_line{
     display: flex;
     justify-content: space-between;
     align-items: end;
     gap: 50px;
-    padding: 0 5rem 0 0;
     align-items: center;
     justify-content: space-between;
 }
