--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
     gap: 3vh;
 }
 .Content_Area>p{
-    align-self: flex-end;
+    vertical-align: bottom;
     grid-column: 1/-1;
 }
 .Content_Area .cards{
@@ -118,7 +118,7 @@ input:focus{
 .Bottom_line_Action_Buttons{
     display: flex;
     justify-content: space-around;
-    gap: 5rem;
+    gap: 2.5rem;
 }
 .Bottom_line_Action_Buttons button{
     width: 5rem;
@@ -161,19 +161,24 @@ input:focus{
 .Notification_Area .Notification_Announcements{
     display: grid;
     grid-template-rows: repeat(3, 1fr);
-    gap: 2vh;
+    gap: 2.5vh;
     margin-bottom: 3vh;
     padding: 2vh;
 }
 .Notification_Area>p{
     font-weight: bold;
     margin-bottom: 3vh;
+    text-align: center;
+    vertical-align: center;
 }
 .Notification_Trending{
     display: flex;
     flex-direction: column;
     gap: 2vh;
     padding: 2vh;
+    border-radius: 1.5vh;
+    background-color: white;
+    margin: 0 3vh;
 }
 .min_dis{
     display: flex;
@@ -181,4 +186,19 @@ input:focus{
 .txt{
     display: flex;
     flex-direction: column;
+}
+.Notification_Announcements{
+    border-radius: 1.5vh;
+    background-color: white;
+    margin: 0 3vh;
+}
+.Announcement_content{
+    border-bottom: 1px solid black ;
+}
+.Announcement_content P{
+    margin-bottom: 5vh;
+}
+.Announcement_content p:nth-child(1){
+    font-weight: bold;
+    margin-bottom: 0.5vh;
 }
